# teraterm-litex

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE.md  README.md  build.rs  resource.h  ttlitex.rc  wrapper.h
.github/workflows/: build.yml
assets/: demo.tty
src/: error.rs  io.rs  lib.rs  sfl.rs  state.rs  teraterm.rs  ui.rs
src/sfl/: frame.rs  loader.rs
src/teraterm/: msvc_32.rs
wix/: License.rtf  main.wxs
