[package]
name = "tt-litex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name="TTXLiteX"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"

[dependencies]
log = { version = "0.4.25", default-features = false }
once_cell = "1.20.3"
rfd = { version = "0.15.2", default-features = false }
stderrlog = { version = "0.6.0", default-features = false }
widestring = "1.1.0"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_IO"
]

