[package]
name = "tt-litex"
version = "0.1.2"
authors = ["William D. Jones <thor0505@comcast.net>"]
license-file = "LICENSE.md"
edition = "2021"
readme = "README.md"
description = "Tera Term plugin that enables uploading files via LiteX"

[lib]
crate-type = ["cdylib"]
name="TTXLiteX"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"

[dependencies]
crc = "3.2.1"
log = { version = "0.4.25", default-features = false }
once_cell = "1.20.3"
parse_int = "0.6.0"
pretty-bytes-typed = "0.2.0"
rfd = { version = "0.15.2", default-features = false }
stderrlog = { version = "0.6.0", default-features = false }
widestring = "1.1.0"
zerocopy = { version = "0.8.17", features = ["derive"] }

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_IO"
]

